# api/controllers/order.js
@@ -5,23 +5,22 @@ module.exports = {
   getOne: getOne,
   save: save,
   update: update,
-  delCategory: delCategory
+  delOrder: delOrder
 };
 
 // GET
 function findAll(req, res) {
-  res.json("all categories");
+  res.json("all orders");
 }
 
 // GET
 function getOne(req, res) {
-  res.json("find a category");
+  res.json("find a order");
 }
 
 // POST
 function save(req, res) {
-  var category = {"name": req.body.name, "description": req.body.description};
-  res.json(category);
+  res.json("new order");
 }
 
 // PUT
@@ -30,6 +29,6 @@ function update(req, res) {
 }
 
 // DELETE
-function delCategory(req, res) {
-  res.json("delete a category")
+function delOrder(req, res) {
+  res.json("delete a order")
 }
